--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Yao Jui-Chung</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" href="favicon.png />
+    <link rel="icon" href="favicon.png" />
     <style>
      * {
        border: 0;
